<resources>
    <string name="app_name">AlcoPart</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stronaG">Start</string>
    <string name="klaser">Twoje Alkohole</string>
    <string name="trzeFrag">Alkomat Wirtualny</string>
    <string name="ulubioneFrag">Ulubione</string>
    <string name="wyszukajFrag">Wyszukaj Alkohol</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="piwo">piwo</string>
    <string name="rum">rum</string>
    <string name="favourite">Ulubione</string>
    <string name="wyszukaj_nazwa">nazwa</string>
    <string name="wyszukaj_pojemnosc">pojemność</string>
    <string name="wyszukaj_marka">marka</string>
    <string name="szukaj">szukaj</string>
    <string name="wódka">wódka</string>
    <string name="whisky">whisky</string>
    <string name="scan_kolekcja">Skanuj</string>
    <string name="send_kolekcja">send</string>
    <string name="tittle">Send your collect</string>
    <string name="dodajAlco">Dodaj alkochol</string>
    <string name="podajdane">Podaj Dane</string>
    <string name="oblicz">Oblicz</string>
    <string name="wzrost">wzrost</string>
    <string name="wiek">wiek</string>
    <string name="rej">Rejestruj</string>
    <string name="zal">Zaloguj</string>
    <string name="wyl">Wyloguj</string>
    <string name="profil">Twój profil</string>
    <string name="recenzja">Dodaj Recenzje</string>


</resources>
