<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/mainFrag"
            android:icon="@mipmap/beer_round"
            android:title="@string/stronaG"
            android:checked="true"
            />

        <item
            android:id="@+id/wyszukajFrag"
            android:icon="@mipmap/beer_round"
            android:title="@string/wyszukajFrag"
            />

        <item
            android:id="@+id/klaserFrag"
            android:icon="@mipmap/beer_round"
            android:title="@string/klaser"
            />

        <item
            android:id="@+id/trzeFrag"
            android:icon="@mipmap/beer_round"
            android:title="@string/trzeFrag"
            />

        <item
            android:id="@+id/ulubioneFrag"
            android:icon="@mipmap/beer_round"
            android:title="@string/ulubioneFrag"
            />


        ></group>

    <item android:title="pozostale"></item>

</menu>